--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: knowitall solutions for startups
     <!-- this is my introduction section with calls to action -->
     <section class="hero pad-top-m">
       <!-- the conatiner below contains my hero elements and will be used again but flipped in the testimonials section -->
-      <div class="grid-middle box-on-top relativeBox">
+      <div class="grid-middle">
         <!-- this is the contianer for the white box and buttons -->
         <div class="col-6_sm-12 grid">
           <!-- this is the container for my white box -->
@@ -21,9 +21,9 @@ title: knowitall solutions for startups
             </div>
           </div>
         </div>
-        <!-- this is the container for my hero image which will overlap so it sits beside and underneath the container for testimonials -->
+        <!-- this is the container for my hero image which will overlap so it sits beside and underneath the container for my intro -->
         <div class="imgRight col-6_sm-12">
-          <img src="https://unsplash.it/450" alt="lily bruns hero image">
+          <img src="https://unsplash.it/500" alt="lily bruns hero image">
         </div>
       </div>
     </section>
@@ -77,16 +77,16 @@ title: knowitall solutions for startups
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
           </div>
           <div class="text-center">
-            <a href="landingpage.html/"><button class="button-main transition-ease">get the case study</button></a>
+            <a href="landingpage.html"><button class="button-main transition-ease">get the case study</button></a>
           </div>
         </div>
       </div>
     </section>
     <!-- this is my testimonials section which tells people why the should work with me -->
     <section class="testimonials">
-      <!-- the container below uses the same class as the hero but will be flipped  -->
-      <div class="grid-middle box-on-top flip-vertical">
-        <div class="col-7_sm-12 bg-white">
+      <!-- this is the container for my testimonials and image -->
+      <div class="grid-middle">
+        <div class="col-7_sm-12 container-float-testimonial bg-white">
           <div>
             <h2 class="text-medium">Why work with me?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -110,7 +110,7 @@ title: knowitall solutions for startups
         </div>
         <!-- this will overlap so it sits beside and underneath the container for testimonials -->
         <div class="col-7_sm-12">
-          <img src="https://unsplash.it/450" alt="image to go with testimonial">
+          <img src="https://unsplash.it/500" alt="image to go with testimonial">
         </div>
       </div>
     </section>
