--- a/landingpage.html
+++ b/landingpage.html
@@ -3,11 +3,10 @@ layout: default-lp
 title: knowitall solutions - case study
 ---
 
-
-    <section>
-      <h1>Title of case study with awesome client</h1>
+    <section class="pad-top-m">
+      <h1 class="pad-bottom-m">Title of case study with awesome client</h1>
       <div class="grid">
-        <div class="col-6_sm-12 bg-white">
+        <div class="col-7_sm-12 bg-white">
           <p>This is a tagline</p>
             <ul>
               <li>this is a descriptive bullet point</li>
@@ -15,9 +14,9 @@ title: knowitall solutions - case study
               <li>give the people all the bullet points</li></ul>
             <p>What are you waiting for? Buy the things.</p>
         </div>
-        <div class="col-6_sm-12 bg-bright">
+        <div class="col-7_sm-12 bg-bright container-float-lpform">
           <h5 class="text-center">download the case study</h5>
-          <form class="grid-spaceAround  pad-form" method="POST" action="http://formspree.io/busababruns@gmail.com">
+          <form class="grid-spaceAround" method="POST" action="http://formspree.io/busababruns@gmail.com">
             <div class="col-6_sm-12 grid">
               <label for="name">First Name</label>
               <input type="text" name="firstname" id="name" placeholder=" Harry">
@@ -30,7 +29,9 @@ title: knowitall solutions - case study
               <label for="email">Email</label>
               <input type="email" name="email" id="email" placeholder=" harry@wizards.com">
             </div>
-            <a href=""><button type="submit" class="button-dark">get the pdf</button></a>
+            <div>
+              <button type="submit" class="button-dark transition-ease margin-top-s">get the pdf</button>
+            </div>
           </form>
         </div>
       </div>
