js and some media queries
added javascript for hamburger menu and played with some media queires to fix layouts.

--- a/blog.html
+++ b/blog.html
@@ -2,3 +2,8 @@
 layout: default
 title: knowitall blog
 ---
+
+    <section class="pad-top-m">
+      <h1 class="text-big">Blog Title</h1>
+
+    </section>
