--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@ title: knowitall solutions for startups
       <!-- the conatiner below contains my hero elements and will be used again but flipped in the testimonials section -->
       <div class="grid-middle">
         <!-- this is the contianer for the white box and buttons -->
-        <div class="col-6_sm-12 grid">
+        <div class="col-6_sm-12">
           <!-- this is the container for my white box -->
           <div class="container-float-heroCTA bg-white">
             <h1>Helping startup teams scale to success.</h1>
             <h6>Happy teams have the know-how and resources to stay on the same page and work in sync.</h6>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <!-- these are the buttons which are meant to midline at the bottom of the container above -->
-            <div>
+            <div class="center-screen-md">
               <a href="blog.html"><button class="button-main transition-ease button-float-learnforfree">learn for free</button></a>
               <a href="services.html"><button class="button-main transition-ease button-float-hireme">hire me</button></a>
             </div>
           </div>
         </div>
         <!-- this is the container for my hero image which will overlap so it sits beside and underneath the container for my intro -->
-        <div class="imgRight col-6_sm-12">
+        <div class="col-6_sm-12 center-screen-md">
           <img src="https://unsplash.it/500" alt="lily bruns hero image">
         </div>
       </div>
